--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
    
 services:
   web:
-    image: django-blog:1
+    build: ./
     environment:
       - DB_NAME=postgres
       - DB_USER=postgres
